--- a/VRChat/11/1365711.html
+++ b/VRChat/11/1365711.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "8/COQfAL+nvqfdnwXKTz962mz4KnxXlis4C9R6cIHyY="></script>
+    "rJjPj1tulJRNMn8JbUpbcWPaR5qLrYNX05MhdCr3cU4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"マグライト（VRChat想定）","description":"マグライトのモデルです。\nテクスチャ適応モデル1種+迷彩柄6種類。\n※内容物だけでは光らないので、UnityにてLightを付けて光らせてください。\n※ライトを下から見るとテクスチャの境目が見えます。\nこちらのモデルはVRChatでの使用を想定して作っていますが、禁止事項を守って頂ければVRChat以外でもご自由にご利用ください。\n\n内容物\n・MugLight.fbx（一部テクスチャ改変可能黒色マグライト）\n・MugLightAshCamo.fbx（灰色迷彩柄）\n・MugLightBrownCamo.fbx（茶色迷彩柄）\n・MugLightDarkPurpleCamo.fbx（暗い紫色迷彩柄）\n・MugLightGreenCamo.fbx（緑色迷彩柄）\n・MugLightLightPurpleCamo.fbx（明るい紫色迷彩柄）\n・MugLightRedCamo.fbx（赤色迷彩柄）\n・MugLight.png（黒色マグライト用テクスチャ）\n・MugLightUV.png（黒色マグライト用テクスチャのUV画像）\n・迷彩柄暗い紫.png（迷彩柄テクスチャ）\n・迷彩柄灰.png（迷彩柄テクスチャ）\n・迷彩柄紫.png（迷彩柄テクスチャ）\n・迷彩柄赤.png（迷彩柄テクスチャ）\n・迷彩柄茶.png（迷彩柄テクスチャ）\n・迷彩柄緑.png（迷彩柄テクスチャ）\n・Mirror.mat（鏡面のマテリアル）\n・LED.mat（LED用エミッション付マテリアル）\n・Glass.mat（レンズ面用マテリアル）\n\n使用方法\nUnityに使用したいモデルと対応したテクスチャを入れてください。\nGlassにはGlass.mat、LEDにはLED.mat、MirrorにはMirror.mat（各マテリアル）をドラッグアンドドロップで適応してください。\nまた、黒色のマグライト（MugLight.fbx）にはテクスチャをMugLightへ適応してください。（テクスチャを使用せず、マテリアルを作成しAlbedoの変更にてカラー変更可能です。）\n迷彩柄は迷彩柄のテクスチャが最初から適応されているので、上記3つのマテリアル適応だけでOKです。\n\n迷彩柄テクスチャは私が作成しました。\nシームレスではないので使い勝手は悪いですが、他のモデルに使用したいなどあった場合はご自由にお使いください。\n\n禁止事項\n再配布（ゲームへの組み込み・VRCのペデスタル等はOK）\n政治的・宗教的・差別的な用途への利用","url":"https://booth.pm/ja/items/1365711","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4dfbeda-de4a-441b-ace4-484612b68061/i/1365711/36efc32c-b0c4-4169-86ba-809a2685d48e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8/COQfAL+nvqfdnwXKTz962mz4KnxXlis4C9R6cIHyY="></script>
+    nonce="rJjPj1tulJRNMn8JbUpbcWPaR5qLrYNX05MhdCr3cU4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -168,7 +168,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      125
+                                      126
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -184,7 +184,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      125
+                                      126
                                     </div>
                                   </div></a>
                                 </div>
@@ -629,7 +629,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
