--- a/VRChat/55/1364055.html
+++ b/VRChat/55/1364055.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "J9Dy2oQ39iWygGlYumFzyiCwUpOjg+LOhl+ScPrYNg8="></script>
+    "P/1BeYtjd2q1IJMrTyU5LmvsOyr00U/pm2/rjdXdKJM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"プロトンライフルPR-2［VRChat向け3Dモデル］","description":"VRChatでの利用を想定したオリジナル銃器モデルです。\n・2320ポリゴン\n\n・赤、青、緑、黄、白、灰、黒のテクスチャ7種同梱\n\n利用規約\n\nオリジナル武器3Dモデル「PR-2 プロトンライフル」\n\n本モデルを購入した時点で利用規約に同意したとみなします。\n利用規約の内容は変更する場合があり、最新のものが適用されます。\n本モデルの使用によって生じたトラブル、損失について、\nTR-96Cトールは一切の責任を負わないものとします。\n\n本モデル、改造モデルの著作権はTR-96Cトールに帰属するものとします。\n\n-------------------------\n\n許可項目\n\n1.本モデルの改造は自由です。\n\n2.本モデル、改造モデルをVRChat等へアップロードして使用する事を許可します。\n\n3.本モデル、改造モデルを\n　ゲーム、アニメーション、アプリケーション制作に使用することを許可します。\n\n4.本モデル、改造モデルを使用したバーチャルYoutuber等の活動への利用を許可します。\n　収益化も問題ありません。\n\n5.本モデル、改造モデルを使用した動画の作成・配信を許可します。\n\n6.本モデル、改造モデルを使用した営利目的・商用目的の利用を許可します。\n\n-------------------------\n\n禁止項目\n\n1.本モデル、改造モデルの再配布、販売を禁止します。\n\n2.本モデル、改造モデルを、購入者本人以外が使用できる状態にすることを禁止します。\n　例：VRChatのペデスタルやクローン可能アバター等、\n　　　購入者本人以外が利用できるようにする事を禁止します。\n\n3.本モデル、改造モデルを使用したゲーム等において、再度使用できる状態の\n　モデルデータを含む状態での配布を禁止します。\n\n4.政治、宗教活動、誹謗中傷目的での使用を禁止します。\n\n-------------------------","url":"https://booth.pm/ja/items/1364055","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/bc8b8fd2-fda2-42e6-9da9-7fdd7fe1e4ca/i/1364055/daffaa10-6f32-4cde-9eb9-9e7e820e31dd_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="J9Dy2oQ39iWygGlYumFzyiCwUpOjg+LOhl+ScPrYNg8="></script>
+    nonce="P/1BeYtjd2q1IJMrTyU5LmvsOyr00U/pm2/rjdXdKJM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -617,7 +617,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
